# sample_geometry_shader

./: .gitignore  CMakeLists.txt  CMakePresets.json
installers/: glad.ps1  glm.ps1  sdl3.ps1
sample_geometry_shader/: CMakeLists.txt
sample_geometry_shader/shaders/: geometry_shader.fs  geometry_shader.gs  geometry_shader.hlsl  geometry_shader.vs
sample_geometry_shader/src/: d3d11_shader.hpp  sample_geometry_shader.cpp  sample_geometry_shader.hpp
